<resources>

    <string name="lorem_title">"Lorem Ipsum"</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"</string>

    <string name="app_name">LetAsk</string>
    <string name="ask_anything_nfor_whoever_you_want">Ask anything. \nFor whoever you want.</string>
    <string name="see_the_questions_and_answers_in_the_original_language_and_in_english_through_instant_translation">See the questions and answers in the original language and in English, through instant translation.</string>
    <string name="continue_with_e_mail">Continue with E-Mail</string>
    <string name="sign_in_as_a_visitor">Sign in as a visitor</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="loading">Loading..</string>
    <string name="m_continue">Continue</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="use_6_char_or_more">use 6 characters or more</string>
    <string name="birthdate">Birthdate</string>
    <string name="day_first">put day, month and year, in that order.</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sign_in">Sign in</string>
    <string name="country">Country</string>
    <string name="we_noticed_there_is_no_account_in_this_email_create_now">We noticed that there is no account in this email, create on now!</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="fill_in_the_extra_information_to_create_your_account">Fill in the extra information to create your account.</string>
    <string name="invalid_date">invalid date</string>
    <string name="invalid_user_name">Invalid user name, minimum of 5 characters</string>
    <string name="select_a_valid_birth_date">Please, select a valid birth date</string>
    <string name="select_your_country">Select your country</string>
    <string name="please_select_your_country">Please, select your country</string>
    <string name="select_a_valid_country">Please select a country from our list</string>
    <string name="name_can_only_contain_letters">Name can only contain letters and spaces</string>
    <string name="invalid_password">Invalid password</string>
    <string name="name_should_countain_5_min">Name should countain a minimun of 5 chars</string>
    <string name="error_creatin_account">Error creating account, try again in a few moments</string>
    <string name="already_registered_with_google">This email is already registered with google sign in in this app</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="this_account_has_email_auth">This account is registered with email address</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="send_email_to_redefine_password">Please, insert your email in the field below, we will send you an email to redefine your password.</string>
    <string name="send_email">Send email</string>
    <string name="email_sent">Email sent</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password_must_contain_6_chars">Password must contain at least 6 characters</string>
    <string name="sign_up">Sign up</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="answer">Answer</string>
    <string name="profile">Profile</string>
    <string name="ask">Ask</string>
    <string name="messages">Messages</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="followed_questions">Followed questions</string>
    <string name="about_us">About Us</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="error_fetching_user_info">Error fetching user info</string>
    <string name="try_again">Try again</string>
    <string name="please_refresh_user_info">Please, refresh your information</string>
    <string name="refresh">Refresh</string>
    <string name="error_fetching_user_information">Error fetching user information,please click the refresh button</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="edit">edit</string>
    <string name="save">Save</string>
    <string name="success">Success!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="camera_permission">Please accept the camera permission to use this function.</string>
    <string name="external_storage_permission">Please accept the external storage permission to use this function.</string>
    <string name="error_updating_name">An error has ocurred, please, try saving again</string>
    <string name="guest_account">Guest account</string>
    <string name="create_an_account_to_edit_your_profile">Create an account to edit your profile!</string>

</resources>