<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_bottom_nav_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/main_bottom_nav_answer"
        android:icon="@drawable/ic_baseline_edit_location_24"
        android:title="@string/answer"/>

    <item
        android:id="@+id/main_bottom_nav_groups"
        android:icon="@drawable/ic_baseline_group_work_24"
        android:title="@string/groups"/>

    <item
        android:id="@+id/main_bottom_nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/main_bottom_nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>



</menu>