<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_activity_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EmailAuthActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/email_activity_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/email_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />


    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/email_Activity_txtHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/continue_with_e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_activity_appBarLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_Activity_inputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_Activity_txtHeadline">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/email_Activity_editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/email_Activity_btnConfirmEmail"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/selector_btn_enabled_disabled"
        android:enabled="false"
        android:padding="0dp"
        android:text="@string/m_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_Activity_inputLayoutEmail" />

    <ProgressBar
        android:id="@+id/email_activity_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/email_Activity_txtHeadline"
        app:layout_constraintStart_toEndOf="@+id/email_Activity_txtHeadline"
        app:layout_constraintTop_toTopOf="@+id/email_Activity_txtHeadline"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/email_activity_fragContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_Activity_btnConfirmEmail">

    </FrameLayout>

    <ImageView
        android:id="@+id/auth_activity_imageViewDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/email_Activity_inputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_Activity_inputLayoutEmail"
        app:layout_constraintTop_toTopOf="@+id/email_Activity_inputLayoutEmail"
        app:tint="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>